--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <th></th>
               </tr>
             </thead>
-            <tbody class="course-list">
+            <tbody id="course-list">
 
             </tbody>
           </table>
