--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <div class="container mt-3">
+      <h1>Course App</h1>
+      <hr/>
       <div class="row">
-        <h1>Course App</h1>
-        <hr />
         <div class="col-md-5">
           <form id="new-course">
             <div class="form-group mt-2">
@@ -43,7 +43,7 @@
                 <th>Image</th>
                 <th>Title</th>
                 <th>Instructor</th>
-                <th></th>
+                <th><button class="deleteAll btn btn-danger ms-2">Delete All</button></th>
               </tr>
             </thead>
             <tbody id="course-list">
